# leptos-repro

./: .gitignore  Cargo.toml  leptosfmt.toml  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
app/: Cargo.toml
app/src/: lib.rs  router.rs
app/src/common/: credentials.rs  error_template.rs  mod.rs  profile.rs  route_paths.rs  utils.rs
app/src/common/user/: mod.rs  onboard_method.rs  user.rs  user_state.rs
app/src/components/: logout.rs  metadata.rs  mod.rs  sidenav.rs
app/src/components/buttons/: mod.rs  submit_button.rs
app/src/components/dropdowns/: mod.rs  profile_dropdown.rs
app/src/components/footers/: footer.rs  mod.rs
app/src/components/headers/: header.rs
app/src/components/svg_icons/: background_pattern.rs  bars_3.rs  chevron_up_down.rs  cog_6_tooth.rs  home.rs  loader.rs  logo.rs  mod.rs  users.rs  x_mark.rs
app/src/components/utils/: create_click.rs  mod.rs
app/src/pages/: landing.rs  mod.rs
app/src/pages/auth/: login.rs
app/src/pages/error/: mod.rs  page401.rs  page404.rs  page500.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: fileserv.rs  lib.rs  main.rs  service.rs  standalone.rs
style/: output.css  tailwind.css
