[package]
name = "app"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
http.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
lz4_flex.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
urlencoding.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:leptos_axum",
    "leptos/ssr", 
    "leptos_meta/ssr",
    "leptos_router/ssr",
]